# mxm-datakraken

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/sources/justetf/: justetf.md
mxm_datakraken/: __init__.py  bootstrap.py
mxm_datakraken/assets/: etf_universe.py
mxm_datakraken/common/: file_io.py  http_adapter.py  latest_bucket.py  types.py
mxm_datakraken/config/: config.py  default.yaml  environment.yaml  machine.yaml  profile.yaml
mxm_datakraken/sources/fca_firds/: file_index.py  files.py
mxm_datakraken/sources/justetf/: api.py  batch.py  discover.py  persistence.py
mxm_datakraken/sources/justetf/batch/: core.py  run.py  runlog.py
mxm_datakraken/sources/justetf/common/: io.py  models.py
mxm_datakraken/sources/justetf/discovery/: api.py  discover.py  persistence.py
mxm_datakraken/sources/justetf/profile_index/: api.py  discover.py  persistence.py
mxm_datakraken/sources/justetf/profiles/: downloader.py  model.py  parser.py  persistence.py
scripts/sources/justetf/: build_profile_index_subset.py  download_profiles_subset.py  extract_isins.py  inspect_snapshot.py  report_profiles_status.py
src/mxm/datakraken/: bootstrap.py
src/mxm/datakraken/assets/: __init__.py
src/mxm/datakraken/common/: caching.py  file_io.py  http_adapter.py
src/mxm/datakraken/config/: config.py
tests/: conftest.py  test_bootstrap.py  test_datakraken_views.py  test_policy_missing_strict.py  test_policy_views_integration.py
tests/common/: test_caching.py  test_file_io.py  test_http_requests_adapter.py  test_latest_bucket.py
tests/config/: test_install_and_load_datakraken_config.py  test_install_datakraken_config.py
tests/sources/fca_firds/: test_file_index.py
tests/sources/justetf/: test_api.py  test_batch.py  test_discover.py  test_persistence.py  test_persistence_read.py
tests/sources/justetf/batch/: test_core.py  test_run.py  test_runlog.py
(+26 files in other folders)
